[package]
name = "guess-num"
version = "0.1.1"
edition = "2021"
description = "A guessing number game"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
itertools = "0.10"
aoko = "0.3.0-alpha.1"